--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,12 +1,29 @@
 .home{    
-    width: 100%;
-    font-size: 1.3rem;
-    height: 96%;    
+    position: relative;
+    font-size: 1rem;
+    align-items: center;
+    text-align: center;
+    height: 100vh;
+
+    #video{
+        position: absolute;
+        top:55%;
+        left: 0;
+        width: 100%;
+       
+        background: center center/cover;
+        z-index: -1;
+        transform: translate(0,-50%);
+        visibility: visible;
+        
+    }
+   
+
 
     background: $dotted_image_url, $bg_sm_image center/cover ;
     
     &__content{
-        margin : 1.5em auto;
+      padding-bottom: 2rem;
     }
 
     &__buttons{        
@@ -26,12 +43,7 @@
         }        
     }
 
-    @include view-lg{
-        height: 60%;
-        &__buttons{
-            display: block;
-        }
-    }
+    
 }
 
 .languages{
@@ -40,7 +52,7 @@
     position: relative;
     font-size: 1rem;
 
-    &::before{
+    &::after{
         content: '';
         clip-path: polygon(0 70%, 0 100%, 100% 100%, 100% 0);
         background: linear-gradient(to right,#222, #222);
