--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,7 +2,7 @@ $fm_red : #FF0500;
 $fm_orange : #FF2F00;
 $fm_yello: #FFB300;
 $fm_black : #202020;
-
+$primary-color : #333;
 $bold : 700;
 
 
