--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,43 +1,24 @@
 @import "config";
 @import "header";
-@import "main";
+@import "home";
 
-html{
-    font-size: 13px;
 
-    @include view-lg{
-        font-size: 20px;
-    }
-}
 
 body{      
-    background-color: #000;    
+    background-color: $primary-color;    
     font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
-    line-height : 1;
-    overflow-x: hidden;    
-    height: 100vh;
-    width: 100vw;
+    line-height : 1;      
+    height: 100vh;    
     
 }
 
 main{
     width: 100%;
     height: 100%;
+     
 }
 
-#video{
-    position: absolute;
-    top:0;
-    left: 50%;
-    min-width: 100%;
-    background-size: cover;        
-    z-index: -1;
-    transform: translateX(-50%);
-    visibility: hidden;
-    @include view-lg {
-        visibility: visible;
-    }   
-}
+
 
     
 
